SSCS-10286 Further changes, fix tests.